update index.html and main.js

--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="./css/main.css" />
-    <title>Document</title>
+    <title>Угодай число</title>
   </head>
   <body class="flex justify-center items-center h-100">
     <div
       id="sms"
       class="bg-[#27374D] p-5 rounded-3xl flex flex-col items-center gap-5 sm:m-0 m-3 shadow-xl/30 visually-hidden"
     >
-      <h1 class="text-center text-[#DDE6ED] text-3xl font-black" id="result_game">
+      <h1
+        class="text-center text-[#DDE6ED] text-3xl font-black"
+        id="result_game"
+      >
         Нажми на начать игру!
       </h1>
       <button
@@ -49,9 +52,7 @@
           Проверить
         </button>
       </form>
-      <p class="text-[#F9CF93] sm:text-xl font-black" id="result">
-        Я готов
-      </p>
+      <p class="text-[#F9CF93] sm:text-xl font-black" id="result">Я готов</p>
       <p class="text-[#DDE6ED] sm:text-2xl text-xl font-black">
         Осталось попыток: <span class="text-[#F8F3D9]" id="life">5</span>
       </p>
