create 1 file and update 1 file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./img/77db518eb1270c0be3083128d2c2278a.png" type="image/x-icon" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="./css/main.css" />
-    <title>Угодай число</title>
+    <title>Угадай число</title>
   </head>
   <body class="flex justify-center items-center h-100">
     <div
